--- a/API/API/DontTouch/appsettings.json
+++ b/API/API/DontTouch/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtOptions": {
+    "SecretKey": "profit",
+    "ExpiresHours": "12"
+  }
 }
